--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
              <!-- Card 2 -->
                    <div class="service2-card card2">
                        <div class="card-image">
-                           <img src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?w=800&h=600&fit=crop" alt="UX & Interaction Design">
+                           <img src="./assets/digital-marketing.jpg" alt="digital marketing">
                        </div>
                        <div class="card-content">
                            <div class="card-header">
@@ -49,7 +49,7 @@
             
             <div class="card-image">
                
-                <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&h=600&fit=crop" alt="Product Strategy">
+                <img src="./assets/production.jpg" alt="Product Strategy">
             </div>
             <div class="card-content">
                 <div class="card-header">
@@ -77,7 +77,7 @@
                    <!-- Card 3 -->
                    <div class="service2-card card3">
                        <div class="card-image">
-                           <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=800&h=600&fit=crop" alt="Brand Identity">
+                           <img src="./assets/webdevelopment.jpg" alt="production">
                        </div>
                        <div class="card-content">
                            <div class="card-header">
@@ -99,7 +99,7 @@
                    <!-- card4 -->
                      <div class="service2-card card4">
                        <div class="card-image">
-                           <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=800&h=600&fit=crop" alt="Brand Identity">
+                           <img src="./assets/podcast.jpg" alt="podcast">
                        </div>
                        <div class="card-content">
                            <div class="card-header">
