--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                    <!-- card4 -->
                      <div class="service2-card card4">
                        <div class="card-image">
-                           <img src="./assets/podcast.jpg" alt="podcast">
+                           <img src="./assets/podcast_studio.JPG" alt="podcast">
                        </div>
                        <div class="card-content">
                            <div class="card-header">
                                <div class="card-icon">
-                                   <i class="fas fa-palette"></i>
+                                 <i class="fas fa-podcast"></i>
                                </div>
                                <h2 class="card-title">Podcast Studio Rentals</h2>
                            </div>
@@ -229,7 +229,7 @@
                     <i class="fas fa-laptop-code"></i>
                 </div>
                 <div class="divider"></div>
-                <h3 class="service-title st1" style="margin-top: 25px;">Complete Website Solutions</h3>
+                <h3 class="service-title st1" >Complete Website Solutions</h3>
                 <p class="service-description">Static, dynamic, interactive, or user-generated websites.</p>
                 <a href="#" class="learn-more lm1">Learn More →</a>
             </div>
@@ -274,7 +274,7 @@
                     <i class="fas fa-video"></i>
                 </div>
                 <div class="divider"></div>
-                <h3 class="service-title st1" style="margin-top: 25px;">Video Production</h3>
+                <h3 class="service-title st1" >Video Production</h3>
                 <p class="service-description">High-quality videos for marketing, branding, and storytelling.</p>
                 <a href="#" class="learn-more lm1">Learn More →</a>
             </div>
@@ -319,7 +319,7 @@
                     <i class="fas fa-microphone-alt"></i>
                 </div>
                 <div class="divider"></div>
-                <h3 class="service-title st1" style="margin-top: 25px;">What you will get</h3>
+                <h3 class="service-title st1" >What you will get</h3>
                 <p class="service-description">Fully equipped in-house studio with 3 cameras, production team, on-screen prompts, and raw footage.</p>
                 <a href="#" class="learn-more lm1">Learn More →</a>
             </div>
